--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,13 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.GET_ACCOUNTS" />
+    <uses-permission android:name="android.permission.WAKE_LOCK" />
+    <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
+
+    <permission android:name="com.cognus.jofoa.permission.C2D_MESSAGE"
+        android:protectionLevel="signature" />
+    <uses-permission android:name="com.cognus.jofoa.permission.C2D_MESSAGE" />
 
     <application
         android:allowBackup="true"
@@ -17,7 +24,7 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="com.cognus.jofoa.JofoaMain"
+            android:name=".Main"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -26,28 +33,12 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Day1"
-            android:label="@string/title_day1" >
+            android:name=".Schedule"
+            android:label="Schedule" >
         </activity>
         <activity
-            android:name=".Day2"
-            android:label="@string/title_day2" >
-        </activity>
-        <activity
-            android:name=".Day3"
-            android:label="@string/title_day3" >
-        </activity>
-        <activity
-            android:name=".Day4"
-            android:label="@string/title_day4" >
-        </activity>
-        <activity
-            android:name=".Day5"
-            android:label="@string/title_day5" >
-        </activity>
-        <activity
-            android:name=".Sobre"
-            android:label="Sobre" >
+            android:name=".About"
+            android:label="About" >
         </activity>
 
         <meta-data
@@ -58,6 +49,18 @@
             android:name="com.google.android.gms.ads.AdActivity"
             android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
             android:theme="@android:style/Theme.Translucent" />
+
+        <receiver
+            android:name=".GcmReceiver"
+            android:permission="com.google.android.c2dm.permission.SEND" >
+            <intent-filter>
+                <action android:name="com.google.android.c2dm.intent.RECEIVE" />
+                <category android:name="com.example.gcm" />
+            </intent-filter>
+        </receiver>
+        <service
+            android:name="com.cognus.jofoa.GcmService">
+        </service>
 
     </application>
 
