--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,15 +1,15 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 19
-    buildToolsVersion "20.0.0"
+    compileSdkVersion 21
+    buildToolsVersion "21.0.1"
 
     defaultConfig {
         applicationId "com.cognus.jofoa"
         minSdkVersion 9
-        targetSdkVersion 19
-        versionCode 1
-        versionName "1.05"
+        targetSdkVersion 21
+        versionCode 102
+        versionName "1.02"
     }
     buildTypes {
         release {
@@ -21,10 +21,7 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services:5+'
-    compile "com.android.support:support-v4:19.0.+"
-    compile "com.android.support:appcompat-v7:19.0.+"
-}
-dependencies {
-
+    compile 'com.google.android.gms:play-services:6.1.11'
+    compile "com.android.support:support-v4:21.0.0"
+    compile "com.android.support:appcompat-v7:21.0.0"
 }
