--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,7 +2,7 @@ apply plugin: 'com.android.application'
 
 android {
     compileSdkVersion 21
-    buildToolsVersion "21.0.1"
+    buildToolsVersion "21.0.2"
 
     defaultConfig {
         applicationId "com.cognus.jofoa"
@@ -24,4 +24,5 @@ dependencies {
     compile 'com.google.android.gms:play-services:6.1.11'
     compile "com.android.support:support-v4:21.0.0"
     compile "com.android.support:appcompat-v7:21.0.0"
+    compile "com.android.support:cardview-v7:21.0.0"
 }
