--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,20 +1,20 @@
 apply plugin: 'com.android.application'
 
 android {
-    compileSdkVersion 21
-    buildToolsVersion "21.1.1"
+    compileSdkVersion 23
+    buildToolsVersion "23.0.1"
 
     defaultConfig {
         applicationId "com.cognus.jofoa"
         minSdkVersion 9
-        targetSdkVersion 21
+        targetSdkVersion 23
         versionCode 102
         versionName "1.02"
     }
 
     buildTypes {
         release {
-            runProguard false
+            minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
@@ -22,8 +22,8 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services:6.1.71'
-    compile "com.android.support:support-v4:21.0.0"
-    compile "com.android.support:appcompat-v7:21.0.0"
-    compile "com.android.support:cardview-v7:21.0.0"
+    compile 'com.google.android.gms:play-services:7.8.0'
+    compile "com.android.support:support-v4:23.0.1"
+    compile "com.android.support:appcompat-v7:23.0.1"
+    compile "com.android.support:cardview-v7:23.0.1"
 }
