--- a/app/build.gradle
+++ b/app/build.gradle
@@ -8,6 +8,7 @@ android {
         applicationId "com.cognus.jofoa"
         minSdkVersion 19
         targetSdkVersion 25
+        multiDexEnabled true
         versionCode 201
         versionName "2.01"
     }
@@ -26,6 +27,7 @@ ext {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:multidex:1.0.1'
     compile 'com.google.android.gms:play-services:10.0.0'
     compile "com.android.support:support-v4:${supportLibVersion}"
     compile "com.android.support:appcompat-v7:${supportLibVersion}"
