--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.cognus.jofoa">
+          xmlns:tools="http://schemas.android.com/tools" package="com.fusco2k.jofoa">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -8,18 +8,17 @@
     <uses-permission android:name="android.permission.WAKE_LOCK" />
     <uses-permission android:name="com.google.android.c2dm.permission.RECEIVE" />
 
-    <permission android:name="com.cognus.jofoa.permission.C2D_MESSAGE"
+    <permission android:name="com.fusco2k.jofoa.permission.C2D_MESSAGE"
                 android:protectionLevel="signature" />
     <uses-permission android:name="com.cognus.jofoa.permission.C2D_MESSAGE" />
 
     <application
-        android:name="android.support.multidex.MultiDexApplication"
-        android:allowBackup="true"
-        android:icon="@drawable/ic_launcher"
-        android:label="@string/app_name"
-        android:theme="@style/AppTheme" >
+            android:allowBackup="true"
+            android:icon="@drawable/ic_launcher"
+            android:label="@string/app_name"
+            android:theme="@style/AppTheme" tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".Main"
+            android:name="com.fusco2k.jofoa.Main"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -28,22 +27,17 @@
             </intent-filter>
         </activity>
         <activity
-            android:name=".Schedule"
+            android:name="com.fusco2k.jofoa.Schedule"
             android:label="Schedule" >
         </activity>
         <activity
-            android:name=".About"
+            android:name="com.fusco2k.jofoa.About"
             android:label="About" >
         </activity>
-
-        <meta-data
-            android:name="com.google.android.gms.version"
-            android:value="@integer/google_play_services_version" />
-
-        <activity
-            android:name="com.google.android.gms.ads.AdActivity"
-            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"
-            android:theme="@android:style/Theme.Translucent" />
+<!--        <activity-->
+<!--            android:name="com.google.android.gms.ads.AdActivity"-->
+<!--            android:configChanges="keyboard|keyboardHidden|orientation|screenLayout|uiMode|screenSize|smallestScreenSize"-->
+<!--            android:theme="@android:style/Theme.Translucent" />-->
 
     </application>
 
